--- a/electronics_news/news/static/css/publish_content.css
+++ b/electronics_news/news/static/css/publish_content.css
@@ -25,6 +25,7 @@ form {
     flex-direction: column;
 }
 
+
 form > h3 {
     margin-top: 15px;
 }
@@ -56,4 +57,11 @@ input[type="checkbox"][name$="-DELETE"] {
 
 label[for$="-DELETE"] {
     display: none;
+}
+
+form label {
+    color: #333; /* Обеспечиваем видимость текста меток */
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block; /* Убедитесь, что они отображаются как блоки */
 }
