--- a/electronics_news/news/templates/password_reset.html
+++ b/electronics_news/news/templates/password_reset.html
@@ -10,9 +10,11 @@
 {% block content %}
 <div class="auth-container">
     <h2>Восстановление пароля</h2>
-    <form method="POST" action="{% url 'password_reset' %}">
-        {% csrf_token %}
-        {{ password_reset_form.as_p }}
+    <form method="POST">
+        <div>
+            <label for="email">Электронная почта</label>
+            <input type="email" id="email" name="email" required>
+        </div>
         <button type="submit">Отправить ссылку для восстановления</button>
     </form>
     <div class="switch">
