--- a/electronics_news/news/templates/password_reset.html
+++ b/electronics_news/news/templates/password_reset.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="auth-container">
     <h2>Восстановление пароля</h2>
-    <form method="POST">
+    <form method="GET">
         <div>
             <label for="email">Электронная почта</label>
             <input type="email" id="email" name="email" required>
