--- a/electronics_news/news/static/css/news.css
+++ b/electronics_news/news/static/css/news.css
@@ -19,7 +19,7 @@
 .news-card h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
-    color: #222; /* Убедитесь, что цвет заголовка контрастирует с фоном */
+    color: #222;
 }
 
 
