--- a/electronics_news/news/static/css/publish_content.css
+++ b/electronics_news/news/static/css/publish_content.css
@@ -60,8 +60,8 @@ label[for$="-DELETE"] {
 }
 
 form label {
-    color: #333; /* Обеспечиваем видимость текста меток */
+    color: #333;
     font-weight: bold;
     margin-bottom: 5px;
-    display: block; /* Убедитесь, что они отображаются как блоки */
+    display: block;
 }
