--- a/electronics_news/news/templates/news.html
+++ b/electronics_news/news/templates/news.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Новости и Обзоры{% endblock %}
+{% block title %}Новости{% endblock %}
 {% load static %}
 
 {% block extra_css %}
@@ -10,12 +10,18 @@
 {% block content %}
 <div class="content-container">
     <h2>Новости</h2>
+    <!-- Форма поиска -->
+    <form method="GET" action="{% url 'news' %}">
+        <input type="text" name="search" placeholder="Поиск по новостям" value="{{ search }}">
+        <button type="submit">Поиск</button>
+    </form>
+
     <div class="news-section">
         {% for news in news_page_obj %}
         <div class="news-card">
             <h3>{{ news.title }}</h3>
             <p class="news-meta">
-                Автор: {{ news.author.username }} | Дата: {{ news.created_at|date:"d.m.Y" }}
+                Автор: {{ news.author.nickname }} | Дата: {{ news.created_at|date:"d.m.Y" }}
             </p>
             <p>{{ news.content|truncatewords:20 }}</p>
             <a href="{% url 'content_detail' news.id %}">Читать далее</a>
@@ -27,31 +33,23 @@
 
     <div class="pagination">
         {% if news_page_obj.has_previous %}
-        <a href="?news_page={{ news_page_obj.previous_page_number }}">&laquo; Предыдущая</a>
+        <a href="?news_page={{ news_page_obj.previous_page_number }}&search={{ search }}">&laquo; Предыдущая</a>
         {% endif %}
 
         {% for page_num in news_page_obj.paginator.page_range %}
         {% if page_num == news_page_obj.number %}
         <span class="current">{{ page_num }}</span>
         {% elif page_num > news_page_obj.number|add:'-3' and page_num < news_page_obj.number|add:'3' %}
-        <a href="?news_page={{ page_num }}">{{ page_num }}</a>
+        <a href="?news_page={{ page_num }}&search={{ search }}">{{ page_num }}</a>
         {% endif %}
         {% endfor %}
         {% if news_page_obj.has_next %}
-        <a href="?news_page={{ news_page_obj.next_page_number }}">Следующая &raquo;</a>
+        <a href="?news_page={{ news_page_obj.next_page_number }}&search={{ search }}">Следующая &raquo;</a>
         {% endif %}
     </div>
 
-    <h2>Обзоры</h2>
-    <div id="review-section">
-
-    </div>
 </div>
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-<script src="{% static 'js/reviews.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.8/dayjs.min.js"></script>
-
 {% endblock %}
