--- a/electronics_news/news/templates/news.html
+++ b/electronics_news/news/templates/news.html
@@ -21,7 +21,12 @@
         <div class="news-card">
             <h3>{{ news.title }}</h3>
             <p class="news-meta">
-                Автор: {{ news.author.nickname }} | Дата: {{ news.created_at|date:"d.m.Y" }}
+                {% if user.is_authenticated %}
+                <a href = "{% url 'user_detail' news.author.id%}" >Автор: {{ news.author.nickname }}</a>
+                {% else %}
+                Автор: {{ news.author.nickname }}
+                {% endif %}
+                | Дата: {{ news.created_at|date:"d.m.Y" }}
             </p>
             <p>{{ news.content|truncatewords:20 }}</p>
             <a href="{% url 'content_detail' news.id %}">Читать далее</a>
