--- a/electronics_news/news/templates/reviews.html
+++ b/electronics_news/news/templates/reviews.html
@@ -22,4 +22,8 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 <script src="{% static 'js/reviews.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.8/dayjs.min.js"></script>
+<script>
+    const isAuthenticated = {{ user.is_authenticated|yesno:"true,false" }};
+</script>
+
 {% endblock %}
